Fixed broken style issue in page-executions.component

--- a/ExecutionMatrix-UI-Source/src/app/page-root/page-executions/page-executions.component.css
+++ b/ExecutionMatrix-UI-Source/src/app/page-root/page-executions/page-executions.component.css
@@ -29,7 +29,7 @@
   border-radius: 5px;
   background-color: rgba(128, 128, 128, 0.05);
   border: 1px solid grey;
-  width: 39vw;
+  width: 90%;
   cursor: pointer;
   text-align: left;
 }
@@ -40,6 +40,7 @@
   display: inline-block;
   margin-right: 5px;
   /*text-align: center;*/
+
 }
 
 
